--- a/store/css/main.css
+++ b/store/css/main.css
@@ -530,7 +530,9 @@ input[type="search"] {
     text-decoration: none;
     color: #ffffff;
     text-transform: uppercase;
-    font-size: 14px; }
+    font-size: 14px;
+    font-weight: bold;
+  }
 
 /* main section */
 .main {
