--- a/landing-page/css/mainApp.css
+++ b/landing-page/css/mainApp.css
@@ -657,6 +657,8 @@ a.btn-int__button {
     transition: all 0.5s ease-in-out; }
 
 .slider-phone {
+  background: url('../img/app-temp/slide1.jpg') 60px 10px no-repeat;
+  background-size: 240px 450px;
   margin: 35px 0 0 150px;
   width: 430px;
   height: 590px;
