--- a/birthday/css/birthday.css
+++ b/birthday/css/birthday.css
@@ -7,7 +7,11 @@ body {
     letter-spacing: 2px;
 }
 
-header {
+.wrapper-show {
+    display: block !important;
+}
+
+.header {
     width: 100%;
     height: 100vh;
 }
@@ -35,6 +39,7 @@ html {
     margin-top: -87.5px;
     font-size: 25px;
     height: 175px;
+    display: none;
 }
 
 .wave {
@@ -54,3 +59,25 @@ html {
         color: #8fc8ae;
     }
 }
+
+.cool-btn {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    display: block;
+    color: black;
+    font: bold 23px sans-serif;
+    background: #0080fa;
+    color: #fff;
+    padding: 10px 30px;
+    border-radius: 10px;
+    transition: background-color .5s ease-in-out;
+}
+
+.cool-btn:hover {
+    background: #05003b;
+    transition: background-color .5s ease-in-out;
+}
+
