--- a/birthday/css/birthday.css
+++ b/birthday/css/birthday.css
@@ -32,6 +32,7 @@ html {
     border-radius: 30px;
     padding: 30px;
     background: #37393B;
+    background-size: 300px 100px;
     position: absolute;
     top: 15%;
     width: 90%;
