--- a/practice/assets/style.css
+++ b/practice/assets/style.css
@@ -210,6 +210,7 @@ label{
 }
 
 .solution {
+    height: 1300px;
     padding-top: 200px;
     position: relative;
     z-index: 1;
@@ -246,6 +247,38 @@ label{
 
 .projects {
     margin-top: 150px;
+}
+
+.project-style {
+    position: relative;
+    z-index: 3;
+}
+
+.project-desc {
+    display: none;
+    background: rgba(255, 255, 255, 0.8);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 4;
+    top: 50%;
+    transform: translate(0, -50%);
+    padding: 10% 10%;
+    text-align: center;
+}
+
+.show-portfolio {
+    display: block;
+}
+
+.project-header__text {
+    color: #ff7200;
+    font: bold 26px Lato, sans-serif
+}
+
+.project-header__desc {
+    color: #000000;
+    font: normal 20px Lato, sans-serif;
 }
 
 .projects-header {
@@ -405,7 +438,7 @@ label{
 }
 
 .latest-news {
-    height: 1250px;
+    height: 1400px;
     padding-top: 400px;
     background: url('../img/subs-back.png') center no-repeat;
     background-size: cover;
