--- a/flower landing/css/cards.css
+++ b/flower landing/css/cards.css
@@ -1,5 +1,17 @@
 body {
     transition: all 1s ease-in-out;
+    box-sizing: border-box;
+    background: #FFFFEC;
+}
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+}
+
+.cards {
+    position: relative;
+    margin-top: -130px;
 }
 
 .section-cards {
@@ -9,6 +21,7 @@ body {
 }
 
 .cards-flower__block {
+    background: #fff;
     display: flex;
     flex-flow: column;
     justify-content: center;
@@ -25,12 +38,12 @@ body {
 
 .cards-flower__section__name {
     font: normal 18px sans-serif;
-    margin-bottom: 0;
+    margin: 10px 0;
 }
 
 .cards-flower__section__price {
     font: normal 20px sans-serif;
-    margin-top: 10px;
+    margin: 0 0 10px 0;
 }
 
 .img-param {
@@ -39,6 +52,13 @@ body {
     border-radius: 13px;
     box-shadow: inset 0 0 35px 15px rgba(4, 0, 41, 0.9);
 }
+
+.hide {
+  display: none;
+}
+
+
+/* button to buy */
 
 .btnflip {
     width: 150px;
@@ -107,7 +127,7 @@ body {
     width: 100%;
     height: 100vh;
     background: rgba(0, 0, 0, 0.7);
-    z-index: 9;
+    z-index: 11;
     display: none;
 }
 
@@ -120,7 +140,6 @@ body {
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
-    display: none;
     z-index: 10;
 }
 
@@ -139,8 +158,13 @@ body {
 .pop-up__info__par {
     font: normal 18px sans-serif;
     text-align: left;
-    line-height: 35px;
-    margin-left: 30px;
+    margin: 10px 20px;
+}
+
+.pop-up__info__slice {
+    font: normal 18px sans-serif;
+    text-align: left;
+    margin: 10px 20px;
 }
 
 .pop-up__text {
@@ -149,15 +173,16 @@ body {
 
 .pop-up__contact__par {
     font: normal 18px sans-serif;
-    margin-left: 50px;
+    margin: 10px 20px;
     text-align: center;
-    line-height: 35px;
+
 }
 
 .fab {
     text-decoration: none;
     font-size: 30px;
     color: #0c27c3;
+    margin-top: 10px;
 }
 
 .pop-up__show {
@@ -271,4 +296,234 @@ body {
     .pop-up {
         width: 90% !important;
     }
+}
+
+/* slider */
+
+#custom-slider {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.slide-img {
+    width: 100%;
+    height: 700px;
+}
+
+/* fixed menu */
+
+.fixed-menu {
+    width: 100%;
+    position: fixed;
+    display: flex;
+    z-index: 10;
+    justify-content: space-around;
+    align-items: center;
+    background: #ffffec;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+}
+
+.logo-and-phone {
+    display: flex;
+    align-items: center;
+}
+
+.main-logo {
+    margin-right: 150px;
+    width: 220px;
+    height: 70px;
+}
+
+.phone-data p:first-child {
+    font: normal 20px Tahoma, sans-serif;
+}
+
+.phone-data {
+    font: normal 18px Tahoma, sans-serif;
+}
+
+.phone-data p a {
+    text-decoration: none;
+    color: #ff9600;
+}
+
+/* search form */
+
+@import url("https://fonts.googleapis.com/css?family=Inconsolata:700");
+
+.container {
+  position: relative;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 300px;
+  height: 100px;
+}
+.container .search {
+  position: absolute;
+  margin: auto;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 60px;
+  height: 60px;
+  background: crimson;
+  border-radius: 50%;
+  transition: all 1s;
+  z-index: 4;
+  box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.4);
+}
+.container .search:hover {
+  cursor: pointer;
+}
+.container .search::before {
+  content: "";
+  position: absolute;
+  margin: auto;
+  top: 22px;
+  right: 0;
+  bottom: 0;
+  left: 22px;
+  width: 12px;
+  height: 2px;
+  background: white;
+  transform: rotate(45deg);
+  transition: all .5s;
+}
+.container .search::after {
+  content: "";
+  position: absolute;
+  margin: auto;
+  top: -5px;
+  right: 0;
+  bottom: 0;
+  left: -5px;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  border: 2px solid white;
+  transition: all .5s;
+}
+.container input {
+  font-family: 'Inconsolata', monospace;
+  position: absolute;
+  margin: auto;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 50px;
+  height: 50px;
+  outline: none;
+  border: none;
+  background: crimson;
+  color: white;
+  text-shadow: 0 0 10px crimson;
+  padding: 0 80px 0 20px;
+  border-radius: 30px;
+  box-shadow: 0 0 25px 0 crimson, 0 20px 25px 0 rgba(0, 0, 0, 0.2);
+  transition: all 1s;
+  opacity: 0;
+  z-index: 5;
+  font-weight: bolder;
+  letter-spacing: 0.1em;
+}
+.container input:hover {
+  cursor: pointer;
+}
+.container input:focus {
+  width: 300px;
+  opacity: 1;
+  cursor: text;
+}
+.container input:focus ~ .search {
+  right: -250px;
+  background: #151515;
+  z-index: 6;
+}
+.container input:focus ~ .search::before {
+  top: 0;
+  left: 0;
+  width: 25px;
+}
+.container input:focus ~ .search::after {
+  top: 0;
+  left: 0;
+  width: 25px;
+  height: 2px;
+  border: none;
+  background: white;
+  border-radius: 0%;
+  transform: rotate(-45deg);
+}
+.container input::placeholder {
+  color: white;
+  opacity: 0.5;
+  font-weight: bolder;
+}
+
+/* preview part */
+
+.preview-section {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    text-align: center;
+}
+
+.preview-section h1 {
+    font: bold 45px sans-serif;
+}
+
+.preview-section h2 {
+    font: normal 35px sans-serif;
+    width: 80%;
+}
+
+.preview-section .top-element {
+    margin: 30px 0;
+
+}
+
+.preview-section .bottom-element {
+    transform: rotate(180deg);
+    margin: 35px 0;
+}
+
+.footer {
+    margin-top: 50px;
+    background: #E4C6FF;
+    padding: 15px 0;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    box-shadow: 0 0 10px rgba(228,198,255, 1);
+}
+
+.footer-logo {
+    width: 220px;
+    height: 70px;
+}
+
+.social-network {
+    font: normal 18px sans-serif;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+}
+
+.copyright {
+    font: normal 14px sans-serif;
+    color: #272727;
 }
